--- a/engine.cfg
+++ b/engine.cfg
@@ -3,7 +3,7 @@
 name="SLMBrowser"
 main_scene="res://main.scn"
 disable_stdout=false
-boot_splash="res://images/splash.png"
+boot_splash="res://assets/images/splash.png"
 icon="res://icon.png"
 
 [autoload]
@@ -12,6 +12,7 @@ debug="*res://debug.gd"
 
 [display]
 
+height=600
 width=800
 
 [render]
